0024865: igesread loopback transfer process should not skip any entity

natural bounds are added to faces with infinite UV bounds and without outer wire
unrelated changes: the output of de test cases now has the list of main test steps.